drivers/acpi/pci_bind.c
@@ -289,7 +289,7 @@ acpi_pci_bind_root (
 		return_VALUE(-ENOMEM);
 	memset(pathname, 0, ACPI_PATHNAME_MAX);
 
-	buffer.length = sizeof(pathname);
+	buffer.length = ACPI_PATHNAME_MAX;
 	buffer.pointer = pathname;
 
 	if (!device || !id || !bus){
